--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "license": "MIT",
   "bugs": "https://github.com/behavior3/behavior3editor/issues",
   "repository": "github:behavior3/behavior3editor",
+  "scripts": {
+    "postinstall": "bower i",
+    "build": "npm install && gulp build"
+  },
   "devDependencies": {
+    "bower": "^1.8.8",
     "electron-packager": "^5.1.1",
     "electron-prebuilt": "^0.33.8",
     "gulp": "~3.9.0",
