Update readme and add deploy script

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "repository": "github:behavior3/behavior3editor",
   "scripts": {
     "postinstall": "bower i",
-    "build": "npm install && gulp build"
+    "build": "npm install && gulp build",
+    "deploy-web": "npm run build && gh-pages -d build"
   },
   "devDependencies": {
     "bower": "^1.8.8",
     "electron-packager": "^5.1.1",
     "electron-prebuilt": "^0.33.8",
+    "gh-pages": "^2.1.1",
     "gulp": "~3.9.0",
     "gulp-angular-templatecache": "~1.7.0",
     "gulp-concat": "~2.6.0",
