--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,9 @@
 {
-  "name"    : "behavior3editor",
+  "name"    : "behaviorTreeEditor",
   "version" : "[BUILD_VERSION]",
   "main"    : "desktop.js",
   "window": {
-    "title"      : "Behavior3 Editor (v[BUILD_VERSION]) http://behavior3.com",
+    "title"      : "Behavior Tree Editor",
     "position"   : "center",
     "toolbar"    : false,
     "frame"      : true,
